--- a/Lada.html
+++ b/Lada.html
@@ -12,7 +12,7 @@
 		<li><a href = "about us.html">О нас</a></li>
 		<li><a href = "#">Услуги</a></li>
 </ul>
-<a href="file:///D:/firstsite/Freash%20%D0%90%D0%92%D0%A2%D0%9E.html" style="float:left; margin-top:-38px; margin-right:50px;"><img src="https://28.img.avito.st/shop/logo/175x105/8409784428.png"></a>
+<a href="index.html" style="float:left; margin-top:-38px; margin-right:50px;"><img src="https://28.img.avito.st/shop/logo/175x105/8409784428.png"></a>
 <form action="" method="get">
   <input name="s" placeholder="Искать здесь..." type="search">
   <button type="submit">Поиск</button>
