--- a/Lexus.html
+++ b/Lexus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title> Lada </title>
+    <title> Lexus </title>
     <link rel="stylesheet" href="outlines.css">
 	</head>
 	<body>
@@ -19,10 +19,10 @@
 </header>
 	<main>
 	<div class="test3">
-	<a href="#"><img class="Avto" src="https://avanta-avto.ru/upload/iblock/ff9/ff981a8067bd99c7d09c7553262b75fe.png" alt="Lada"></a>
-	<a href="#"><img class="Avto" src="https://static.tildacdn.com/tild3333-3333-4464-b064-383030366466/1800_1200_d33a3cc0ed.png" alt="Lada"></a>
-	<a href="#"><img class="Avto" src="https://pngimg.com/uploads/lada/lada_PNG99.png" alt="Lada"></a>
-	<a href="#"><img class="Avto" src="https://pngimg.com/uploads/lada/lada_PNG46.png" alt="Lada"></a>
+	<a href="#"><img class="Avto" src="https://www.standi.ru/images/img_auto_without_bg/636/lexuspng13.png" alt="Lada"></a>
+	<a href="#"><img class="Avto" src="https://clipart-best.com/img/lexus/lexus-clip-art-7.png" alt="Lada"></a>
+	<a href="#"><img class="Avto" src="https://img-s-msn-com.akamaized.net/tenant/amp/entityid/CC9euy.img" alt="Lada"></a>
+	<a href="#"><img class="Avto" src="https://clipart-best.com/img/lexus/lexus-clip-art-6.png" alt="Lada"></a>
 	</div>
 	</main>
 	 <footer>
