--- a/about us.html
+++ b/about us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Freash Avto</title>
+    <title>О нас</title>
     <link rel="stylesheet" href="outlines.css">
   </head>
   <body>
